# Compliance_KG_agent

./: .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
app/: agent_graph.py  entity_extractor.py  test.py
app/components/: chunking.py  embedder.py  extractor.py  grouping.py  judge.py  kb_update_compare.py  store_neo4j.py  test.ipynb
configs/: blueprint.json
models/: local llm serving 방법.txt
